WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
272554
[WebGPU] GPUQueueDescriptor.idl is missing
https://bugs.webkit.org/show_bug.cgi?id=272554
Summary
[WebGPU] GPUQueueDescriptor.idl is missing
Mike Wyrzykowski
Reported
2024-04-11 14:08:10 PDT
[WebGPU] GPUQueueDescriptor.idl is missing. It was recently added to the specification.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-04-11 14:08:32 PDT
<
rdar://problem/126298421
>
Mike Wyrzykowski
Comment 2
2024-04-11 22:10:53 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/27183
EWS
Comment 3
2024-05-03 21:25:56 PDT
Committed
278365@main
(d7291479188e): <
https://commits.webkit.org/278365@main
> Reviewed commits have been landed. Closing PR #27183 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug