[WebGPU] GPUQueueDescriptor.idl is missing https://bugs.webkit.org/show_bug.cgi?id=272554 <radar://126298421>

Reviewed by Tadeu Zagallo.

Add GPUQueueDescriptor which simply sets the label on the GPUQueue.

* Source/WebCore/CMakeLists.txt:
* Source/WebCore/DerivedSources-input.xcfilelist:
* Source/WebCore/DerivedSources-output.xcfilelist:
* Source/WebCore/DerivedSources.make:
* Source/WebCore/Modules/WebGPU/GPUDeviceDescriptor.h:
* Source/WebCore/Modules/WebGPU/GPUDeviceDescriptor.idl:
* Source/WebCore/Sources.txt:
* Source/WebCore/WebCore.xcodeproj/project.pbxproj:

* Source/WebCore/Modules/WebGPU/GPUQueueDescriptor.h: Added.
* Source/WebCore/Modules/WebGPU/GPUQueueDescriptor.idl: Added.

Canonical link: https://commits.webkit.org/278365@main