Source/WebCore/Modules/WebGPU/GPUDeviceDescriptor.h
@@ -27,6 +27,7 @@
 
 #include "GPUFeatureName.h"
 #include "GPUObjectDescriptorBase.h"
+#include "GPUQueueDescriptor.h"
 #include "WebGPUDeviceDescriptor.h"
 #include <cstdint>
 #include <wtf/HashMap.h>
@@ -50,6 +51,7 @@ struct GPUDeviceDescriptor : public GPUObjectDescriptorBase {
 
     Vector<GPUFeatureName> requiredFeatures;
     Vector<KeyValuePair<String, uint64_t>> requiredLimits;
+    GPUQueueDescriptor defaultQueue;
 };
 
 }
